# fv

./: .gitignore  CLAUDE.md  Cargo.toml  README.md
.github/workflows/: bump.yml  ci.yml  release.yml
packaging/homebrew/: fv.rb
src/: app.rs  config.rs  finder.rs  git.rs  main.rs  text.rs  tree.rs  ui.rs  viewer.rs  watch.rs
src/app/: keys.rs  mod.rs  mode.rs  mouse.rs
src/editor/: buffer.rs  diff.rs  mod.rs
src/tree/: mod.rs  node.rs  scan.rs
src/ui/: editor_pane.rs  finder_panel.rs  help.rs  icons.rs  mod.rs  settings_panel.rs  status_bar.rs  text_pane.rs  tree_pane.rs  viewer_pane.rs
src/viewer/: content.rs  highlight.rs  mod.rs  search.rs  viewport.rs
