[package]
name = "fv"
version = "0.2.0"
edition = "2024"
description = "Read-only TUI code viewer with syntax highlighting and git status"
license = "Apache-2.0"
repository = "https://github.com/Matuyuhi/fv"

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
syntect = "5.2"
ignore = "0.4"
notify = "8"
